test/tests/stages/16_characters_and_strings/invalid_types/extra_credit/compound_assign_from_string.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  *
  identifier(s)
  =
  string literal("some string ")
  ;
  identifier(s)
  +=
  string literal("another str")
  ;
  return
  const int(0)
  ;
  }
